added nav to index.html, added header + button

--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
 </head>
 <body>
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+<nav>
+<ul>
+  <li><a href=#>HOME</a></li>
+  <li><a href="#">ABOUT</a></li>
+  <li><a href="#">OUR ARTISTS</a></li>
+  <li><a href="#">BOOK YOUR TATTOO</a></li>
+  <li><a href="#">CONTACT</a></li>
+  <li><a href="#">FAQ</a></li>
+</ul>
+</nav>
+
+<h1>Welcome to Railbender!</h1>
+<p>Located in Ottawa, Railbender Studio is Hintonburg's newest tattoo studio & art gallery. Passionate about tattoos, fascinated with all things art. </p>
+
+<a href="#">
+  <button>BOOK YOUR TATTOO</button>
+</a>
+
+
 </body>
 </html>
