--- a/booking.html
+++ b/booking.html
@@ -4,9 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/custom.css.">
-  <title>Document</title>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://use.typekit.net/xvp6lbn.css"> -->
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Sanchez&family=Source+Sans+3:wght@300;400;500&display=swap');
+  </style>
+  <title>Railbender Studio</title>
 </head>
 <body>
+<p>fhksjdhfhhsdf</p>>
+
+
+
+
+
+  
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
