edited nav, added bg colour

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
   <title>Railbender Studio</title>
 </head>
-<body>
+<body class="bg-custom-beige">
 
 
 
 <!-- NAV SECTION -->
 
-<nav class="navbar navbar-expand-lg bg-dark">
+<!-- <nav class="navbar navbar-expand-lg navbar-light custom-navbar">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Railbender Studios</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,19 +53,36 @@
         </ul>
         </div>
         </div>
+</nav> -->
+
+<nav id="menu" class="navbar navbar-expand-lg navbar-dark custom-navbar">
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item"><a href="http://" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="http://" class="nav-link">About</a></li>
+      <li class="nav-item"><a href="http://" class="nav-link">Our Artists</a></li>
+      <li class="nav-item"><a href="http://" class="nav-link">Book Your Tattoo</a></li>
+      <li class="nav-item"><a href="http://" class="nav-link">Contact Us</a></li>
+      <li class="nav-item"><a href="http://" class="nav-link">FAQ</a></li>
+    </ul>
+  </div>
 </nav>
+
 
 
 
 
       
 
-  <img src="/images/railbender-optimized.jpg" class="img-thumbnail" alt="main-image">
+  <img src="/optimized-imgs/railbender-optimized.jpg" class="img-thumbnail" alt="main-image">
 
 
   <section id="hero">
-    <div class="container px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-start">
+    <div class="container px-4 py-5 bg-light">
+      <div class="container custom-container">
+    <!-- Container content goes here -->
+
+      <div class="row flex-lg-row-reverse align-items-center">
         <h1 class="welcome">Welcome to Railbender!</h1>
             
             <p>Located in Ottawa, Railbender Studio is Hintonburg's newest tattoo studio & art gallery. Passionate about tattoos, fascinated with all things art.
@@ -75,6 +92,7 @@
             <button type="button" class="btn btn-dark">BOOK YOUR TATTOO</button>
           </a>
       </div>
+    </div>
     </div>
   </section>
 
@@ -86,28 +104,28 @@
   <div class="row">
 
     <div class="col-md-3 mb-3">
-      <img src="/images/45eec23de2e870cbf4830487713afd3b.jpeg" class="img-fluid img-thumbnail" alt="Image 1">
+      <img src="/optimized-imgs/geometric.jpeg" class="img-fluid img-thumbnail" alt="Image 1">
     </div>
     <div class="col-md-3 mb-3">
-      <img src="/images/67b2d125040085887d53d012915cad84.jpeg" class="img-fluid img-thumbnail" alt="Image 2">
+      <img src="/optimized-imgs/neck-tatt.jpeg" class="img-fluid img-thumbnail" alt="Image 2">
     </div>
     <div class="col-md-3 mb-3">
-      <img src="/images/3067f74aa0555acdf28b5c49cd33fbe3.jpeg" class="img-fluid img-thumbnail" alt="Image 3">
+      <img src="/optimized-imgs/pennywise.jpeg" class="img-fluid img-thumbnail" alt="Image 3">
     </div>
     <div class="col-md-3 mb-3">
-      <img src="/images/901F573D-9407-4BD9-9191-6A0F264EF532.jpeg" class="img-fluid img-thumbnail" alt="Image 4">
+      <img src="/optimized-imgs/sleeve.jpeg" class="img-fluid img-thumbnail" alt="Image 4">
     </div>
       <div class="col-md-3 mb-3">
-      <img src="/images/901F573D-9407-4BD9-9191-6A0F264EF532.jpeg" class="img-fluid img-thumbnail" alt="Image 5">
+      <img src="/optimized-imgs/rose-hand.webp" class="img-fluid img-thumbnail" alt="Image 5">
     </div>
         <div class="col-md-3 mb-3">
-      <img src="/images/901F573D-9407-4BD9-9191-6A0F264EF532.jpeg" class="img-fluid img-thumbnail" alt="Image 6">
+      <img src="/optimized-imgs/pennywise.jpeg" class="img-fluid img-thumbnail" alt="Image 6">
     </div>
         <div class="col-md-3 mb-3">
-      <img src="/images/901F573D-9407-4BD9-9191-6A0F264EF532.jpeg" class="img-fluid img-thumbnail" alt="Image 7">
+      <img src="/optimized-imgs/geometric.jpeg" class="img-fluid img-thumbnail" alt="Image 7">
     </div>
         <div class="col-md-3 mb-3">
-      <img src="/images/901F573D-9407-4BD9-9191-6A0F264EF532.jpeg" class="img-fluid img-thumbnail" alt="Image 8">
+      <img src="/optimized-imgs/pennywise.jpeg" class="img-fluid img-thumbnail" alt="Image 8">
     </div>
   </div>
 
