--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,92 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/custom.css">
-  <title>Document</title>
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://use.typekit.net/xvp6lbn.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Sanchez&family=Source+Sans+3:wght@300;400;500&display=swap');
+  </style>
+
+<link rel="icon" type="image/x-icon" href="/images/favicon/favicon_io/favicon.ico">
+
+
+  <title>Railbender Studio</title>
 </head>
-<body>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<body class="bg-custom-tan">
+
+
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Railbender Studios</a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-light">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">Our Artists</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="/booking.html">Book Your Tattoo</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="/contact.html">Contact</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">FAQ</a>
+        </li>
+        </ul>
+        </div>
+        </div>
+</nav>
+
+
+
+
+<div class="container-info">
+<div class="info1"> <h1>CONTACT US</h1>
+        <ul>
+          <li><a>Railbenderstudios@hotmail.com</a></li>
+          <li><a>(613) 123-1234</a></li>
+        </ul></div>
+
+<div class="info2"> <h1>SOCIALS</h1>
+          <ul>
+            <li><a class="link-offset-1 link-underline link-underline-opacity-0" href="#">Instagram</a></li>
+            <li><a class="link-offset-2 link-underline link-underline-opacity-0" href="#">Twitter</a></li>
+            <li><a class="link-offset-3 link-underline link-underline-opacity-0" href="#">Facebook</a></li>
+          </ul></div>
+
+
+<div class="info3"> <h1>LOCATION</h1>
+        <p>57 Preston St, Ottawa, ON K1R 7N6</p>
+        <div class="hours">
+          <p>MON -- 10:00am-6:00pm</p>
+          <p>TUE -- 10:00am-6:00pm</p>
+          <p>WED -- 10:00am-6:00pm</p>
+          <p>THU -- 10:00am-6:00pm</p>
+          <p>FRI -- 10:00am-6:00pm</p>
+          <p>SAT -- 10:00am-6:00pm</p>
+          <p>SUN -- CLOSED</p>
+        </div>
+        </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 </body>
-</html>
+  </html>
