updated background colors, began media queries, adjusted nav bar, inserted img and grid

--- a/booking.html
+++ b/booking.html
@@ -12,13 +12,52 @@
   <title>Railbender Studio</title>
 </head>
 <body>
-<p>fhksjdhfhhsdf</p>>
+<main>
+
+<body class="bg-custom-beige">
+<main>
+
+
+
+<!-- top beige block sec with logo -->
+<header>
+<div class="container-fluid">
+  <div class="bg-custom-beige py-5">
+    <div class="row justify-content-center">
+    <img src="/optimized-imgs/logo.png" class="img-fluid" alt="Centered Image">
+  </div>
+</div>
+
+
+<nav id="navigation" class="navbar navbar-expand-lg navbar-dark custom-navbar sticky-top">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav mx-auto "> 
+        <li class="nav-item px-3"><a href="http://" class="nav-link">Home</a></li>
+        <li class="nav-item px-3"><a href="http://" class="nav-link">About</a></li>
+        <li class="nav-item px-3"><a href="http://" class="nav-link">Our Artists</a></li>
+        <li class="nav-item px-3"><a href="/booking.html" class="nav-link">Book Your Tattoo</a></li>
+        <li class="nav-item px-3"><a href="/contact.html" class="nav-link">Contact Us</a></li>
+        <li class="nav-item px-3"><a href="http://" class="nav-link">FAQ</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</div>
+</header>
+
+<div class="wrapper-flex-column">      
+<div class="row px-5">
+  <div class="col-md-8 pb-5">
+  <img src="/optimized-imgs/guy-tattooing-optimized.jpg" class="img-fluid py-3" alt="booking">
+
+
+
+  </main>
 
 
 
 
-
-  
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
