--- a/contact.html
+++ b/contact.html
@@ -21,45 +21,51 @@
 <body class="bg-custom-tan">
 
 
-<nav class="navbar navbar-expand-lg navbar-light">
+
+<header>
+<div class="container-fluid">
+  <div class="bg-custom-beige py-5">
+    <div class="row justify-content-center">
+    <img src="/optimized-imgs/logo.png" class="img-fluid" alt="Centered Image">
+  </div>
+</div>
+
+<!-- nav bar -->
+<nav id="navigation" class="navbar navbar-expand-lg navbar-dark custom-navbar sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Railbender Studios</a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-light">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Our Artists</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="/booking.html">Book Your Tattoo</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">FAQ</a>
-        </li>
-        </ul>
-        </div>
-        </div>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav mx-auto "> 
+        <li class="nav-item px-3"><a href="http://" class="nav-link">Home</a></li>
+        <li class="nav-item px-3"><a href="http://" class="nav-link">About</a></li>
+        <li class="nav-item px-3"><a href="http://" class="nav-link">Our Artists</a></li>
+        <li class="nav-item px-3"><a href="/booking.html" class="nav-link">Book Your Tattoo</a></li>
+        <li class="nav-item px-3"><a href="/contact.html" class="nav-link">Contact Us</a></li>
+        <li class="nav-item px-3"><a href="http://" class="nav-link">FAQ</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
+</div>
+</header>
 
 
 
 
-<div class="container-info">
-<div class="info1"> <h1>CONTACT US</h1>
+
+
+<section id="contact-info"
+<div class="container-fluid py-5">
+  <div class="col-lg-6">
+
+  <div class="info1 row"> 
+    <h2>CONTACT US</h2>
         <ul>
           <li><a>Railbenderstudios@hotmail.com</a></li>
           <li><a>(613) 123-1234</a></li>
         </ul></div>
+</div>
 
-<div class="info2"> <h1>SOCIALS</h1>
+<div class="info2 row"> <h2>SOCIALS</h2>
           <ul>
             <li><a class="link-offset-1 link-underline link-underline-opacity-0" href="#">Instagram</a></li>
             <li><a class="link-offset-2 link-underline link-underline-opacity-0" href="#">Twitter</a></li>
@@ -67,7 +73,7 @@
           </ul></div>
 
 
-<div class="info3"> <h1>LOCATION</h1>
+<div class="info3"> <h2>LOCATION</h2>
         <p>57 Preston St, Ottawa, ON K1R 7N6</p>
         <div class="hours">
           <p>MON -- 10:00am-6:00pm</p>
@@ -80,6 +86,8 @@
         </div>
         </div>
 </div>
+</div>
+</section>
 
 
 
@@ -88,8 +96,13 @@
 
 
 
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-
+  <footer class="py-2 bg-dark">
+    <div class="container">
+      <p class="text-center text-light m-auto">&copy; Railbender Studios</p>
+    </div>
+  </footer>
 
 </body>
   </html>
