--- a/booking.html
+++ b/booking.html
@@ -9,19 +9,21 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sanchez&family=Source+Sans+3:wght@300;400;500&display=swap');
   </style>
+  <link rel="icon" type="image/x-icon" href="/images/favicon/favicon_io/favicon.ico">
   <title>Railbender Studio</title>
 </head>
-<body>
+
 <main>
 
-<body class="bg-custom-beige">
-<main>
+
+  
+
 
 
 
 <!-- top beige block sec with logo -->
 <header>
-<div class="container-fluid">
+<div class="container-fluid px-0">
   <div class="bg-custom-beige py-5">
     <div class="row justify-content-center">
     <img src="/optimized-imgs/logo.png" class="img-fluid" alt="Centered Image">
@@ -29,35 +31,79 @@
 </div>
 
 
-<nav id="navigation" class="navbar navbar-expand-lg navbar-dark custom-navbar sticky-top">
+<nav id="navigation">
+<nav class="navbar navbar-expand-md navbar-dark custom-navbar sticky-top">
   <div class="container-fluid">
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav mx-auto "> 
-        <li class="nav-item px-3"><a href="http://" class="nav-link">Home</a></li>
-        <li class="nav-item px-3"><a href="http://" class="nav-link">About</a></li>
-        <li class="nav-item px-3"><a href="http://" class="nav-link">Our Artists</a></li>
-        <li class="nav-item px-3"><a href="/booking.html" class="nav-link">Book Your Tattoo</a></li>
-        <li class="nav-item px-3"><a href="/contact.html" class="nav-link">Contact Us</a></li>
-        <li class="nav-item px-3"><a href="http://" class="nav-link">FAQ</a></li>
-      </ul>
-    </div>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon">
+    </span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item px-5">
+        <a class="nav-link" href="index.html">HOME</a>
+      </li>
+      <li class="nav-item px-5">
+        <a class="nav-link" href="#">ABOUT</a>
+      </li>
+      <li class="nav-item px-5">
+        <a class="nav-link" href="#">OUR ARTISTS</a>
+      </li> 
+      <li class="nav-item px-5">
+        <a class="nav-link" href="booking.html">BOOK YOUR TATTOO</a>
+      </li>  
+      <li class="nav-item px-5">
+        <a class="nav-link" href="contact.html">CONTACT</a>
+      </li>      
+      <li class="nav-item px-5">
+        <a class="nav-link" href="#">FAQ</a>
+      </li>    
+    </ul>
+  </div>  
+  </div>
   </div>
 </nav>
-</div>
+</nav>
 </header>
 
-<div class="wrapper-flex-column">      
-<div class="row px-5">
-  <div class="col-md-8 pb-5">
-  <img src="/optimized-imgs/guy-tattooing-optimized.jpg" class="img-fluid py-3" alt="booking">
+<body>
 
 
 
-  </main>
+<div class="d-flex align-items-center justify-content-center vh-100 booking-bg">
+  <div class="container text-center py-5 px-5 mx-auto bg-custom-fade">
+    <h1 class="book-container">Book Your Tattoo</h1>
+    <p class="book-txt">Ready to turn your tattoo dreams into reality? Booking with us is a breeze! Dive into our online booking hub, where you can check out the work of our talented tattoo artists. Pick your favorite style, and when you're ready, hit us up with your preferred date and time. It's like setting up a hangout, only this time, it's all about the ink. </p>
+
+          <div class="container-btn">
+            <a href="booking.html">
+              <button type="button" class="brown-button px-5 py-2">BOOK NOW</button>
+            </a>
+</div>
+</div>
+</div>
 
 
 
 
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+
+
+
+  
+
+
+</main>
+
+
+  
+   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+  <footer class="py-2 bg-custom-brown">
+    <div class="container">
+      <p class="text-center text-light m-auto">&copy; Railbender Studios</p>
+    </div>
+  </footer>
+
 </body>
 </html>
