removed slashes test

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 <div class="container-fluid px-0">
   <div class="bg-custom-beige py-5">
     <div class="row justify-content-center">
-    <img src="/optimized-imgs/logo.png" class="img-fluid" alt="Centered Image">
+    <img src="optimized-imgs/logo.png" class="img-fluid" alt="Centered Image">
   </div>
 </div>
 
