--- a/booking.html
+++ b/booking.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="css/custom.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.typekit.net/xvp6lbn.css">
      <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sanchez&family=Source+Sans+3:wght@300;400;500&display=swap');
   </style>
-  <link rel="icon" type="image/x-icon" href="/images/favicon/favicon_io/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon/favicon_io/favicon.ico">
   <title>Railbender Studio</title>
 </head>
 
@@ -27,7 +27,7 @@
 <div class="container-fluid px-0">
   <div class="bg-custom-beige py-5">
     <div class="row justify-content-center">
-    <img src="/optimized-imgs/logo.png" class="img-fluid" alt="Centered Image">
+    <img src="optimized-imgs/logo.png" class="img-fluid" alt="Centered Image">
   </div>
 </div>
 
