--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="css/custom.css">
 
-   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://use.typekit.net/xvp6lbn.css">
@@ -15,7 +15,7 @@
 </style>
 
 
-<link rel="icon" type="image/x-icon" href="/images/favicon/favicon_io/favicon.ico">
+<link rel="icon" type="image/x-icon" href="images/favicon/favicon_io/favicon.ico">
 
 
   <title>Railbender Studio</title>
@@ -87,34 +87,34 @@
 <div class="wrapper-flex-column">      
 <div class="row px-5">
   <div class="col-md-8 pb-2">
-  <img src="/optimized-imgs/railbender-optimized.jpg" class="img-fluid py-3" alt="main-image">
+  <img src="optimized-imgs/railbender-optimized.jpg" class="img-fluid py-3" alt="main-image">
     <div class="inline-flex-container">
         <div class="row align-items-start">
         
       
         <div class="col-sm-3 mb-3">
-          <img src="/cropped/geometric.jpeg" class="rounded mx-auto d-block" alt="Image 1">
+          <img src="cropped/geometric.jpeg" class="rounded mx-auto d-block" alt="Image 1">
         </div>
         <div class="col-sm-3 mb-3">
-          <img src="/cropped/neck-tatt.jpeg" class="rounded mx-auto d-block" alt="Image 2">
+          <img src="cropped/neck-tatt.jpeg" class="rounded mx-auto d-block" alt="Image 2">
         </div>
         <div class="col-sm-3 mb-3">
-          <img src="/cropped/pennywise.jpeg" class="rounded mx-auto d-block" alt="Image 3">
+          <img src="/ropped/pennywise.jpeg" class="rounded mx-auto d-block" alt="Image 3">
         </div>
           <div class="col-sm-3 mb-3">
-          <img src="/cropped/flowers.jpeg" class="rounded mx-auto d-block" alt="Image 1">
+          <img src="cropped/flowers.jpeg" class="rounded mx-auto d-block" alt="Image 1">
         </div>
         <div class="col-sm-3 mb-3">
-          <img src="/cropped/dragon.jpeg" class="rounded mx-auto d-block" alt="Image 2">
+          <img src="cropped/dragon.jpeg" class="rounded mx-auto d-block" alt="Image 2">
         </div>
          <div class="col-sm-3 mb-3">
-          <img src="/cropped/japanese.webp" class="rounded mx-auto d-block" alt="Image 2">
+          <img src="cropped/japanese.webp" class="rounded mx-auto d-block" alt="Image 2">
         </div>
         <div class="col-sm-3 mb-3">
-          <img src="/cropped/sleeve.jpeg" class="rounded mx-auto d-block" alt="Image 2">
+          <img src="cropped/sleeve.jpeg" class="rounded mx-auto d-block" alt="Image 2">
         </div>
         <div class="col-sm-3 mb-3">
-          <img src="/cropped/rose-hand.webp" class="rounded mx-auto d-block" alt="Image 2">
+          <img src="cropped/rose-hand.webp" class="rounded mx-auto d-block" alt="Image 2">
         </div>
     </div>
   </div>
